src/assets/common.scss
/* ... */
.bg-blue-600 {
  background-color: rgba(206, 255, 217, 0.994);
  font-size: 12px;
  color: green;
}

.bg-red-600 {
  // background-color: rgba(245, 198, 203, 0.85);
  background-color: rgba(249, 194, 206, 0.984);
  color: #721c24;
  font-size: 12px;
}

.bg-gray-600 {
  background-color: #4b5563;
  /* Example hexadecimal color code for gray */
}

.bg-orange-400 {
  background-color: rgba(245,
      198,
      203,
      0.85);
  /* Example hexadecimal color code for orange */
}

.bg-indigo-600 {
  background-color: #4f46e5;
  /* Example hexadecimal color code for indigo */
}

.bg-white-600 {
  background-color: #ffffff;
  /* Example hexadecimal color code for white */
}

.font-gray-300 {
  color: #d1d5db;
  /* Example hexadecimal color code for gray */
}

body {
  font-family: "Roboto Condensed", sans-serif !important;
  line-height: 15px;
}

body table.table {
  margin-bottom: 0;
}

.whitespace {
  // background-color: black;
  position: absolute;
  width: 100vw;
  height: 100%;
  margin-top: 1%;
}

.custom-checkbox .form-check-input:checked {
  background-color: #ffc742;
  border-color: #ffc742;
}

.custom-checkbox .form-check-input:focus {
  border-color: #28a745;
}

.custom-checkbox .form-check-input {
  border-radius: 50%;
}

.loader1 {
  background: $white;
  opacity: 0.6;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999999;
  margin-top: 2rem;
}

.teenPatti-table-item {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border: 0.2px solid #c7c8ca;
  cursor: pointer;
}

.teenPatti-table-row {
  background-color: #f7f7f7;
  width: 100%;
  display: flex;
  flex-direction: row;
}

.tiePairbtn-theme {
  display: flex;
  color: #fff !important;
  background-image: linear-gradient(to right, #004a25, #ffc742) !important;
  width: 100% !important;
  border-radius: 4px !important;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2) !important;
  border: 0 !important;
  padding: 5px 0px !important;
  cursor: pointer !important;
  font-size: 16px !important;
  font-weight: 600;
  position: relative;
  text-align: center;
  min-height: 46px !important;
  justify-content: center !important;
  align-items: center !important;
  flex-wrap: wrap;
}

.tiePairbtn-theme.suspended:after {
  border-radius: 4px;
}

.suspended {
  position: relative;
  pointer-events: none;
  cursor: none;
}

.suspended::before {
  background-image: url(../assets/images/baccarat/lock.svg) !important;
  background-size: 17px 17px;
  filter: invert(1);
  -webkit-filter: invert(1);
  background-repeat: no-repeat;
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-position: center;
  pointer-events: none;
}

.suspended::after {
  content: "";
  background-color: #373636d6;
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  cursor: not-allowed;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.lock {
  position: relative;
  pointer-events: none;
  cursor: none;
}

.lock::before {
  background-image: url(../assets//images//baccarat//lock.svg);
  background-size: 17px 17px;
  filter: invert(1);
  -webkit-filter: invert(1);
  background-repeat: no-repeat;
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-position: center;
  pointer-events: none;
}

.lock::after {
  content: "";
  background-color: #373636d6;
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  cursor: not-allowed;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.suspended-poker20 {
  position: relative;
  pointer-events: none;
  cursor: none;
}

.suspended-poker20::before {
  background-image: url(../assets/images/baccarat/lock.svg) !important;
  background-size: 17px 17px;
  filter: invert(1);
  -webkit-filter: invert(1);
  background-repeat: no-repeat;
  content: "";
  position: absolute;
  z-index: 1;
  top: -10px;
  left: 0;
  width: 100%;
  height: 100%;
  background-position: center;
  pointer-events: none;
}

.suspended-poker20::after {
  content: "";
  background-color: #373636d6;
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  cursor: not-allowed;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.suspended-1day {
  position: relative;
  pointer-events: none;
  cursor: none;
}

.suspended-1day::before {
  background-image: url(../assets/images/baccarat/lock.svg) !important;
  background-size: 17px 17px;
  filter: invert(1);
  -webkit-filter: invert(1);
  background-repeat: no-repeat;
  content: "";
  position: absolute;
  z-index: 1;
  top: -9px;
  left: 0;
  width: 100%;
  height: 100%;
  background-position: center;
  pointer-events: none;
}

.suspended-1day::after {
  content: "";
  background-color: #373636d6;
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  cursor: not-allowed;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.card32-table-container {
  width: 100%;
  background-color: #f7f7f7;
  display: flex;
  flex-direction: column;
}

.card32-table-row {
  width: 100%;
  display: flex;
  flex-direction: row;
  // border: 1px solid #c7c8ca;
}

/* Marquee.css */

.marquee-container {
  overflow: hidden;
  white-space: nowrap;
  width: 100%;
}

.marquee-content {
  display: inline-block;
  font-size: 14px;
  white-space: nowrap;
  font-style: italic;
  animation: marqueeAnimation 60s linear infinite;
}

.liveDot {
  width: 10px;
  height: 10px;
  background-color: $green;
  border-radius: 50%;
}

.react-date-picker {
  border: 0;
}

.react-date-picker__wrapper {
  height: 38px;
  border-radius: 5px !important;
  border: 1px solid $gray !important;
  outline: 0;
}
/* ... */

